update welcome.html and ui for better visibility

--- a/repocompass-extension/popup/popup.html
+++ b/repocompass-extension/popup/popup.html
@@ -77,13 +77,13 @@
           <div class="status-box" id="statusBox">
             <div class="status-sprite" id="statusSprite">🗡️</div>
             <p class="status-text" id="statusText">
-              NAVIGATE TO A JOB POSTING TO START COMPANY RESEARCH...
+              Go to a job posting to start
             </p>
           </div>
 
           <div id="jobInfo" class="job-card hidden">
             <div class="job-card-header">
-              <span class="quest-badge">★ JOB DETECTED ★</span>
+              <span class="quest-badge">★ JOB FOUND ★</span>
             </div>
             <h3 id="jobTitle" class="job-title">Loading...</h3>
             <p id="companyName" class="company-name">
@@ -97,7 +97,7 @@
             <div class="company-header">
               <span class="company-sprite">🏢</span>
               <div class="company-details">
-                <span class="company-label">COMPANY INTELLIGENCE</span>
+                <span class="company-label">COMPANY INFO</span>
               </div>
             </div>
             <div class="company-links">
@@ -117,13 +117,13 @@
 
           <button id="generateBtn" class="pixel-btn primary large" disabled>
             <span class="btn-icon">⚡</span>
-            <span class="btn-text">GENERATE PROJECT IDEAS</span>
+            <span class="btn-text">GENERATE IDEAS</span>
             <span class="btn-loader hidden"></span>
           </button>
 
           <div id="projectIdeas" class="loot-container hidden">
             <div class="loot-header">
-              <span>💡</span> PROJECT IDEAS GENERATED <span>💡</span>
+              <span>💡</span> IDEAS GENERATED <span>💡</span>
             </div>
             <div id="ideasList" class="loot-list"></div>
           </div>
@@ -336,13 +336,13 @@
           <div id="savedIdeasList" class="inventory-grid">
             <div class="empty-inventory">
               <span class="empty-icon">📦</span>
-              <p>YOUR INVENTORY IS EMPTY!</p>
-              <p class="empty-hint">SAVE PROJECT IDEAS TO FILL YOUR INVENTORY</p>
+              <p>No saved ideas yet</p>
+              <p class="empty-hint">Save ideas to see them here</p>
             </div>
           </div>
 
           <button id="clearInventoryBtn" class="pixel-btn danger small hidden">
-            <span>🗑️</span> DROP ALL ITEMS
+            <span>🗑️</span> CLEAR ALL
           </button>
         </div>
       </section>
@@ -391,12 +391,12 @@
 
             <div class="checkbox-row">
               <input type="checkbox" id="enableCache" checked>
-              <label for="enableCache">ENABLE CACHE (SAVES GOLD)</label>
+              <label for="enableCache">ENABLE CACHE</label>
             </div>
 
             <div class="checkbox-row">
               <input type="checkbox" id="autoAnalyze">
-              <label for="autoAnalyze">AUTO-SCAN QUESTS</label>
+              <label for="autoAnalyze">AUTO-ANALYZE JOBS</label>
             </div>
 
             <div class="checkbox-row">
