csp error and api call fix

--- a/repocompass-extension/welcome.html
+++ b/repocompass-extension/welcome.html
@@ -414,17 +414,7 @@
     </div>
   </div>
 
-  <script>
-    // Animate skill bars on load
-    setTimeout(() => {
-      const bars = document.querySelectorAll('.skill-bar-fill');
-      const widths = ['30%', '20%', '50%', '40%', '10%'];
-      bars.forEach((bar, i) => {
-        setTimeout(() => {
-          bar.style.width = widths[i];
-        }, i * 200);
-      });
-    }, 500);
-  </script>
+  <!-- External script for CSP compliance -->
+  <script src="welcome.js"></script>
 </body>
 </html>
