extract json file

--- a/repocompass-extension/popup/popup.html
+++ b/repocompass-extension/popup/popup.html
@@ -382,11 +382,11 @@
             </div>
           </div>
 
-          <!-- Game Options -->
+          <!-- Extension Options -->
           <div class="config-section">
             <div class="config-label">
               <span class="config-icon">🎮</span>
-              <span>GAME OPTIONS</span>
+              <span>EXTENSION OPTIONS</span>
             </div>
 
             <div class="checkbox-row">
