--- a/repocompass-extension/welcome.html
+++ b/repocompass-extension/welcome.html
@@ -368,7 +368,7 @@
           </a>
         </div>
         <p style="font-family: 'VT323', monospace; font-size: 14px; color: #aaaacc; margin-top: 12px;">
-          Only ONE API key needed! No more GitHub or SerpAPI tokens.
+          Only ONE API key needed!
         </p>
       </div>
 
