point system update

--- a/repocompass-extension/popup/popup.html
+++ b/repocompass-extension/popup/popup.html
@@ -154,6 +154,10 @@
                 <span class="power-label">POWER LEVEL</span>
                 <span class="power-value" id="powerLevel">0</span>
               </div>
+              <div class="available-points">
+                <span class="points-label">⭐ AVAILABLE POINTS</span>
+                <span class="points-value" id="availablePoints">0</span>
+              </div>
             </div>
 
             <!-- Skill Trees -->
